--- a/index.html
+++ b/index.html
@@ -1,17 +1,82 @@
-<!doctype html>
-<html lang="en" class="h-100">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Mobile Application Developer in Toronto">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/app.css">
   <title>Clare Choi</title>
 </head>
+
 <body>
-  <div>
-    <p>cclare0211</p>
+  <header>
+    <div class="outer-container">
+      <nav class='nav-container'>
+        <a class="site-logo transition-link" href="/">
+          <span class='logo-text'>BA</span>
+        </a>
+        <ul class="nav-right">
+          <li class="list-item"><a class="transition-link" href="/">Home</a></li>
+          <li class="list-item"><a class="transition-link" href="/project-list.html">Projects</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="content">
+    <section class="inner-container hero">
+      <h1>
+        Hello, my name is Clare. I am a Mobile Application Developer / Front End Developer living in
+        Toronto, ON.
+      </h1>
+    </section>
+    <section class="outer-container space-bottom">
+      <img src="#" alt="Clare Choi Photo" />
+    </section>
+    <section class="inner-container space-bottom">
+      <h3>About</h3>
+      <p>
+        I am 
+      </p>
+      <h3>Project</h3>
+      <h4>IOS</h4>
+      <p>
+        Swift Swift UI
+      </p>
+      <h4>Adroid</h4>
+      <p>
+        Java
+      </p>
+      <h4>React Native</h4>
+      <p>
+        react native
+      </p>
+    </section>
+    <section class="cta-section border">
+      <div class="inner-container">
+        <h1>Interested in working together?</h1>
+        <a href="#"
+          class="cta-button">Email Me <span class="arrow-right">&#8594;</span></a>
+      </div>
+    </section>
   </div>
+
+  <footer class="border">
+    <p>
+      <bold>Copyright Clare Choi <span id="footer-date"></span></bold>
+    </p>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
+
 </html>
