--- a/index.html
+++ b/index.html
@@ -12,35 +12,46 @@
   <title>Clare Choi</title>
 </head>
 
-<body>
-  <header>
-    <div class="outer-container">
-      <nav class='nav-container'>
-        <a class="site-logo transition-link" href="/">
-          <span class='logo-text'>BA</span>
+<body style="border: 8px solid #000; margin: 0; height: 100vh;">
+
+  <header class="mb-5">
+    <!-- address phone -->
+    <!-- login, cart -->
+
+    <nav class="navbar navbar-expand-sm">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#togglerNav"
+          aria-controls="togglerNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <a class="navbar-brand d-sm-inline-block" href="#">
+          <img src="images/logo_transparent.png" style="width: 64px;" alt="Clare Choi Logo">
         </a>
-        <ul class="nav-right">
-          <li class="list-item"><a class="transition-link" href="/">Home</a></li>
-          <li class="list-item"><a class="transition-link" href="/project-list.html">Projects</a></li>
-        </ul>
-      </nav>
-    </div>
+
+        <div class="collapse navbar-collapse justify-content-end" id="togglerNav">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link link-dark active" href="index.html">HOME</a>
+            <a class="nav-item nav-link link-dark" href="projects.html">PROJECTS</a>
+          </div><!-- navbar -->
+        </div><!-- collapse -->
+      </div><!-- container -->
+    </nav>
+
   </header>
 
-  <div class="content">
-    <section class="inner-container hero">
+  <div class="container">
+    <section class="inner-container mb-5">
       <h1>
-        Hello, my name is Clare. I am a Mobile Application Developer / Front End Developer living in
+        Hello, my name is Clare. I am a Mobile Application Developer living in
         Toronto, ON.
       </h1>
     </section>
-    <section class="outer-container space-bottom">
-      <img src="#" alt="Clare Choi Photo" />
-    </section>
-    <section class="inner-container space-bottom">
+
+    <section class="inner-container mb-5">
       <h3>About</h3>
       <p>
-        I am 
+        I am
       </p>
       <h3>Project</h3>
       <h4>IOS</h4>
@@ -56,27 +67,29 @@
         react native
       </p>
     </section>
-    <section class="cta-section border">
-      <div class="inner-container">
-        <h1>Interested in working together?</h1>
-        <a href="#"
-          class="cta-button">Email Me <span class="arrow-right">&#8594;</span></a>
+    <section class="mb-5">
+      <div class="inner-container text-center">
+        <h1 class="mb-5">Interested in working together?</h1>
+        <a href="#" class="btn btn-outline-info ">Email Me <span class="arrow-right">&#8594;</span></a>
       </div>
     </section>
   </div>
 
-  <footer class="border">
+  <footer class="mt-auto text-center">
     <p>
       <bold>Copyright Clare Choi <span id="footer-date"></span></bold>
     </p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
