--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Clare Choi</title>
 </head>
 
-<body style="border: 8px solid #000; margin: 0; height: 100vh;">
+<body style="border: 8px solid #000; margin: 0;">
 
   <header class="mb-5">
     <!-- address phone -->
@@ -41,36 +41,43 @@
 
   </header>
 
-  <div class="container">
-    <section class="inner-container mb-5">
-      <h1>
+  <div>
+    <section class="container h-section inner-container mb-5">
+      <h2 class="h-name">
         Hello, my name is Clare. I am a Mobile Application Developer living in
         Toronto, ON.
-      </h1>
+      </h2>
     </section>
 
-    <section class="inner-container mb-5">
+    <section class="container inner-container mb-5">
       <h3>About</h3>
       <p>
-        I am
+        I am currently working as a web consultant in Galgol, and I am studying mobile application development and strategy as a
+        postgraduate. I have worked on multiple projects as a CTI developer, worked at SKTelecom for KM system management and
+        service, and also worked for the CSR team to improve the brand image. Now I am studying hard to expand my second career as a <strong>mobile application developer</strong>. IOS, Android project is in
+        progress.
       </p>
       <h3>Project</h3>
-      <h4>IOS</h4>
+      <h5>IOS</h5>
       <p>
-        Swift Swift UI
+        Studied IOS Development with <strong>SWIFT</strong> and <strong>SWIFT UI</strong>, implementing data persistence (Core Data, Firebase), location
+        services (Apple CoreLocation and MapKit Framework), network connectivity (RESTful web service), audio/video player
+        (AVFoundation Framework), WatchOS, created a project Parking App.
       </p>
-      <h4>Adroid</h4>
+      <h5>Adroid</h5>
       <p>
-        Java
+        Studied Android Development with <strong>Java</strong>, implementing data persistence (Room, Firebase), location services (Google
+        Maps), network connectivity (REST API), camera, created a project Parking App using Android Jetpack architecture
+        components and Git.
       </p>
-      <h4>React Native</h4>
+      <h5>React Native</h5>
       <p>
         react native
       </p>
     </section>
-    <section class="mb-5">
-      <div class="inner-container text-center">
-        <h1 class="mb-5">Interested in working together?</h1>
+    <section class="r-section border">
+      <div class="container inner-container text-center">
+        <h2 class="h-name mb-5">Interested in working a project together?</h2>
         <a href="#" class="btn btn-outline-info ">Email Me <span class="arrow-right">&#8594;</span></a>
       </div>
     </section>
