--- a/projects.html
+++ b/projects.html
@@ -3,18 +3,19 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Mobile Application Developer in Toronto">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/app.css">
-  <title>Projects</title>
+  <title>Clare Choi</title>
 </head>
 
-<body style="height: 100vh">
+<body style="border: 8px solid #000; margin: 0;">
 
-  <header class="mb-auto">
+  <header class="mb-5">
     <!-- address phone -->
     <!-- login, cart -->
 
@@ -31,8 +32,8 @@
 
         <div class="collapse navbar-collapse justify-content-end" id="togglerNav">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="index.html">HOME</a>
-            <a class="nav-item nav-link active" href="projects.html">PROJECTS</a>
+            <a class="nav-item nav-link link-dark active" href="index.html">HOME</a>
+            <a class="nav-item nav-link link-dark" href="projects.html">PROJECTS</a>
           </div><!-- navbar -->
         </div><!-- collapse -->
       </div><!-- container -->
@@ -40,12 +41,38 @@
 
   </header>
 
-  <div class="content">
-    
-    
+  <div>
+    <section class="container h-section inner-container mb-5">
+      <h2 class="h-name">
+        Recent Projects:
+      </h2>
+    </section>
+
+    <section class="container inner-container mb-5">
+      <h3>Swift/Swift UI</h3>
+      <h5>IOS</h5>
+      <p>
+      </p>
+      <h3>Java</h3>
+      <h5>Android</h5>
+      <p>
+      </p>
+      <h5></h5>
+      <p>
+      </p>
+      <h5>ETC</h5>
+      <p>
+      </p>
+    </section>
+    <section class="r-section border">
+      <div class="container inner-container text-center">
+        <h2 class="h-name mb-5">Interested in working a project together?</h2>
+        <a href="#" class="btn btn-outline-info ">Email Me <span class="arrow-right">&#8594;</span></a>
+      </div>
+    </section>
   </div>
 
-  <footer class="border">
+  <footer class="mt-auto text-center">
     <p>
       <bold>Copyright Clare Choi <span id="footer-date"></span></bold>
     </p>
@@ -57,8 +84,8 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
 </body>
 
