--- a/index.html
+++ b/index.html
@@ -6,12 +6,104 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+    <link rel="stylesheet" href="css/app.css">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/app.css">
+
   <title>Clare Choi</title>
 </head>
+<style>
+  html {
+  font-family: "Times New Roman", Times, serif;
+}
+
+a {
+  color: #000;
+}
+
+a:visited {
+  color: #000;
+}
+
+p {
+  line-height: 2em;
+  margin-bottom: 1.5em;
+}
+
+strong {
+  color: #ab2537fa;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin: 0;
+}
+
+h3 {
+  font-size: 1.65em;
+  line-height: 1em;
+  margin-bottom: 2em;
+}
+
+h5 {
+  font-size: 1.25em;
+  line-height: 1.5em;
+  margin-bottom: 1.5em;
+  color: #ab2537fa;
+  text-transform: uppercase;
+}
+
+h-name {
+  font-size: 3em;
+  line-height: 1.5em;
+  margin-bottom: 1em;
+}
+
+header,
+section {
+  display: block;
+}
+
+.inner_container {
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.inner_container {
+  max-width: 80em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.border {
+  border-top: 1px solid #f0eeee;
+}
+
+.h-section {
+  padding-top: 6em;
+  padding-bottom: 6em;
+}
+
+.r-section {
+  text-align: center;
+  padding-top: 3em;
+  padding-bottom: 4em;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+body {
+  border: 8px solid #000;
+  margin: 0;
+}
+</style>
 
 <body style="border: 8px solid #000; margin: 0;">
 
