--- a/projects.html
+++ b/projects.html
@@ -6,103 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="css/app.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+  
+    <link rel="stylesheet" href="css/app.css?after" type="text/css" media="screen">
   <title>Clare Choi</title>
 </head>
-<style>
-  html {
-  font-family: "Times New Roman", Times, serif;
-}
-
-a {
-  color: #000;
-}
-
-a:visited {
-  color: #000;
-}
-
-p {
-  line-height: 2em;
-  margin-bottom: 1.5em;
-}
-
-strong {
-  color: #ab2537fa;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 700;
-  margin: 0;
-}
-
-h3 {
-  font-size: 1.65em;
-  line-height: 1em;
-  margin-bottom: 2em;
-}
-
-h5 {
-  font-size: 1.25em;
-  line-height: 1.5em;
-  margin-bottom: 1.5em;
-  color: #ab2537fa;
-  text-transform: uppercase;
-}
-
-h-name {
-  font-size: 3em;
-  line-height: 1.5em;
-  margin-bottom: 1em;
-}
-
-header,
-section {
-  display: block;
-}
-
-.inner_container {
-  padding-left: 2em;
-  padding-right: 2em;
-}
-
-.inner_container {
-  max-width: 80em;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.border {
-  border-top: 1px solid #f0eeee;
-}
-
-.h-section {
-  padding-top: 6em;
-  padding-bottom: 6em;
-}
-
-.r-section {
-  text-align: center;
-  padding-top: 3em;
-  padding-bottom: 4em;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-body {
-  border: 8px solid #000;
-  margin: 0;
-}
-</style>
 
 <body style="border: 8px solid #000; margin: 0;">
 
@@ -140,27 +50,73 @@ body {
     </section>
 
     <section class="container inner-container mb-5">
-      <h3>Swift/Swift UI</h3>
-      <h5>IOS</h5>
-      <p>
-      </p>
-      <h3>Java</h3>
-      <h5>Android</h5>
-      <p>
-      </p>
-      <h5></h5>
-      <p>
-      </p>
-      <h5>ETC</h5>
-      <p>
-      </p>
-    </section>
-    <section class="r-section border">
-      <div class="container inner-container text-center">
-        <h2 class="h-name mb-5">Interested in working a project together?</h2>
-        <a href="#" class="btn btn-outline-info ">Email Me <span class="arrow-right">&#8594;</span></a>
+
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="images/parking-android.png" class="card-img-top" alt="parking app screen">
+            <div class="card-body">
+              <h5 class="card-title">Android Parking Location Saving</h5>
+              <p class="card-text">I used firebase firestore for login.<a href="#" class="stretched-link"></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/parking-ios.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">IOS Parking Location Saving</h5>
+              <p class="card-text">Swift</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/homepage.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Restaurant Homepage</h5>
+              <p class="card-text">JavaScript.</p>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col">
+          <div class="card">
+            <img src="images/tourist-ios.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">IOS Tourist Attraction</h5>
+              <p class="card-text">Swift.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/millionaire.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Who Wants To Be A Millionaire</h5>
+              <p class="card-text">Swift.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="images/tourist-android.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Tourist Attraction</h5>
+              <p class="card-text">Android.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+  </div>
+
+  <section class="r-section border">
+    <div class="container inner-container text-center">
+      <h2 class="h-name mb-5">Interested in working a project together?</h2>
+      <a href="#" class="btn btn-outline-info ">Email Me <span class="arrow-right">&#8594;</span></a>
+    </div>
+  </section>
   </div>
 
   <footer class="mt-auto text-center">
