update main contents

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/app.css?after">
+  <link rel="stylesheet" href="css/app.css?after">
   <title>Clare Choi</title>
 </head>
 
@@ -54,27 +54,29 @@
     <section class="container inner-container mb-5">
       <h3>About</h3>
       <p>
-        I am currently working as a web consultant in Galgol, and I am studying mobile application development and strategy as a
-        postgraduate. I have worked on multiple projects as a CTI developer, worked at SKTelecom for KM system management and
-        service, and also worked for the CSR team to improve the brand image. Now I am studying hard to expand my second career as a <strong>mobile application developer</strong>. IOS, Android project is in
-        progress.
+        I am currently working as a web consultant in Galgol, and I have attained app development skills on IOS and
+        Android in Java, Swift, React Native, as I developed various projects with local database, Firestore, network
+        REST API, location services. I have experience on multiple projects as a CTI developer, worked at SKTelecom for
+        KM system management and service, and also worked for the CSR team to improve the brand image. I am constantly
+        educated to keep up with the rapid pace of development in the IT field ,including postgraduate courses in
+        <strong>mobile application development</strong> . IOS, Android project is in progress.
       </p>
       <h3>Project</h3>
       <h5>IOS</h5>
       <p>
-        Studied IOS Development with <strong>SWIFT</strong> and <strong>SWIFT UI</strong>, implementing data persistence (Core Data, Firebase), location
-        services (Apple CoreLocation and MapKit Framework), network connectivity (RESTful web service), audio/video player
-        (AVFoundation Framework), WatchOS, created a project Parking App.
+        developed IOS app with <strong>SWIFT</strong> and <strong>SWIFT UI</strong>, implementing data persistence
+        (Core Data, Firebase), location services (Apple CoreLocation and MapKit Framework), network connectivity
+        (RESTful web service), audio/video player (AVFoundation Framework), WatchOS, created a project Parking App.
       </p>
       <h5>Adroid</h5>
       <p>
-        Studied Android Development with <strong>Java</strong>, implementing data persistence (Room, Firebase), location services (Google
-        Maps), network connectivity (REST API), camera, created a project Parking App using Android Jetpack architecture
-        components and Git.
+        developed Android app with <strong>Java</strong>, implementing data persistence (Room, Firebase), location
+        services (Google Maps), network connectivity (REST API), camera, created a project Parking App using Android
+        Jetpack architecture components and Git.
       </p>
       <h5>React Native</h5>
       <p>
-        react native
+        developed Mobile app with React Native.
       </p>
     </section>
     <section class="r-section border">
