--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  
-    <link rel="stylesheet" href="css/app.css?after" type="text/css" media="screen">
+
+  <link rel="stylesheet" href="css/app.css?after" type="text/css" media="screen">
   <title>Clare Choi</title>
 </head>
 
@@ -66,7 +66,7 @@
             <img src="images/parking-ios.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">IOS Parking Location Saving</h5>
-              <p class="card-text">Swift</p>
+              <!-- <p class="card-text">Swift</p> -->
             </div>
           </div>
         </div>
@@ -75,17 +75,17 @@
             <img src="images/homepage.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Restaurant Homepage</h5>
-              <p class="card-text">JavaScript.</p>
+              <!-- <p class="card-text">JavaScript.</p> -->
             </div>
           </div>
         </div>
-        
+
         <div class="col">
           <div class="card">
             <img src="images/tourist-ios.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">IOS Tourist Attraction</h5>
-              <p class="card-text">Swift.</p>
+              <!-- <p class="card-text">Swift.</p> -->
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
             <img src="images/millionaire.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Who Wants To Be A Millionaire</h5>
-              <p class="card-text">Swift.</p>
+              <!-- <p class="card-text">Swift.</p> -->
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             <img src="images/tourist-android.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tourist Attraction</h5>
-              <p class="card-text">Android.</p>
+              <!-- <p class="card-text">Android.</p> -->
             </div>
           </div>
         </div>
