--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
             <img src="images/parking-android.png" class="card-img-top" alt="parking app screen">
             <div class="card-body">
               <h5 class="card-title">Android Parking Location Saving</h5>
-              <p class="card-text">I used firebase firestore for login.<a href="#" class="stretched-link"></a></p>
+              <!-- <p class="card-text">I used firebase firestore for login.<a href="#" class="stretched-link"></a></p> -->
             </div>
           </div>
         </div>
