--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,8 @@
   <section class="r-section border">
     <div class="container inner-container text-center">
       <h2 class="h-name mb-5">Interested in working a project together?</h2>
-      <a href="#" class="btn btn-outline-info ">Email Me <span class="arrow-right">&#8594;</span></a>
+      <a href="mailto:cclare0211@gmail.com" class="btn btn-outline-info ">Email Me <span
+          class="arrow-right">&#8594;</span></a>
     </div>
   </section>
   </div>
